# Ospark

./: .gitignore  LICENSE.rst  README.md  pyproject.toml  setup.cfg
ospark/: __init__.py
ospark/algorithm/: blokcwise_making.py
ospark/backbone/: __init__.py  auto_encoder.py  backbone.py  builder.py  discrete_vae.py  resnet.py  u_net.py  vision_transformer.py
ospark/cnn_net/: resnet.py
ospark/data/: data_operator.py  encoder.py  folder.py  path.py  save_delege.py
ospark/data/generator/: __init__.py  coca_data_generator.py  dvae_data_generator.py  fots_data_generator.py  translate_data_generator.py
ospark/data/processor/: auto_click.py
ospark/detection_model/: pixel_wise.py
ospark/former/: __init__.py  builder.py  exdeep_transformer.py  former.py  informer.py  transformer.py
ospark/models/: BEiT.py  __init__.py  builder.py  coca.py  exdeep_transformer.py  former.py  gpt_2.py  informer.py  pixel_wise.py  text_recognition.py  transformer.py
ospark/nn/: loss_function.py  model.py
ospark/nn/block/: __init__.py  connection_block.py  deep_transformer_block.py  embedding_decoder_block.py  gpt_2_block.py  image_decoder.py  informer_block.py  resnet_block.py  transformer_block.py  vgg_block.py
ospark/nn/cell/: __init__.py  resnet_cell.py
ospark/nn/component/: activation.py  basic_module.py  name_space.py  normalization.py  weight.py
ospark/nn/layer/: __init__.py  connection_layer.py  convolution_layer.py  deep_attention.py  deep_feed_forward.py  dense_layer.py  distilling_layer.py  embedding_layer.py  feed_forward.py  prob_sparse.py  self_attention.py
ospark/nn/layers/: __init__.py  activation.py  connection_layer.py  convolution_attention.py  convolution_layer.py  deep_attention.py  deep_feed_forward.py  dense_layer.py  distilling_layer.py  embedding_layer.py  feed_forward.py  gated_linear_units.py  normalization.py  pooling_layer.py  prob_sparse.py  self_attention.py
ospark/nn/loss_function/: balanced_loss.py  contrastive_loss.py  cross_entropy.py  degree_loss.py  dice_loss.py  focal_loss.py  iou_loss.py  loss_function.py  sparse_categorical_cross_entropy.py
ospark/nn/metrics/: __init__.py  confusion_matrix.py
ospark/nn/optimizer/: learning_rate_schedule.py
ospark/ocr/: fots.py
ospark/predictor/: __init__.py  coca_predictor.py  fots_predictor.py  translator.py
ospark/recognition_model/: text_recognition.py
ospark/samles/: fots_sample.py
ospark/samples/: exdeep_transformer_sample.py  fots_sample.py  train_beit.py  train_coca.py  train_dVAE.py  translator_sample.py
ospark/trainer/: __init__.py  auto_encoder_trainer.py  beit_trainer.py  coca_trainer.py  exdeep_transformer.py  transformer_trainer.py
ospark/utility/: non_max_suppression.py  padding_method.py  roi_rotate.py  trainer.py  weight_initializer.py
src/ospark/: __main__.py
