[tool.poetry]
name = "ospark"
version = "0.0.3"
description = "Building powerful model & Enjoy it!"
authors = ["ospark-org <donggicai1991@gmail.com>"]
keywords = ["transformer-series", "former-series", "former", "transformer"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"

[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
