[tool.poetry]
name = "ospark"
version = "0.1.4"
description = "Ospark is an opensource for quickly builder of former model series."
authors = ["ospark-org <donggicai1991@gmail.com>"]
keywords = ["text recognition", "NLP", "attention", "tensorflow", "transformer"]
license = "Apache License 2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research"
]


[tool.poetry.dependencies]
python = ">=3.7, <3.10"
tensorflow = "^2.12.0"

[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
