[metadata]
name = ospark
version = 0.0.3
description = Building powerful model & Enjoy it!
url = https://github.com/ospark-org/Ospark
long_description = file: README.md, CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/markdown
author = ospark-org,
author_email = abnertsai@awoo.com.tw,
keywords = ospark, allspark, former, transformer
license = Apache License 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires =
    tensorflow >=2.3
